# Ketarin

./: .gitignore  Ketarin.csproj  Ketarin.sln  MainForm.Designer.cs  MainForm.resx  app.config  packages.config
CDBurnerXP/: ObjectListView.cs
Forms/: AboutDialog.Designer.cs  AboutDialog.resx  AddCustomColumnDialog.Designer.cs  ApplicationDatabaseBaseDialog.Designer.cs  ApplicationDatabaseBaseDialog.resx  ApplicationJobDialog.Designer.cs  BrowserPreviewDialog.Designer.cs  ChooseAppsToInstallDialog.Designer.cs  ChooseAppsToInstallDialog.resx  CloseProcessInstructionDialog.Designer.cs  CommandControl.Designer.cs  CopyFileInstructionDialog.Designer.cs  CopyFileInstructionDialog.resx  CustomSetupInstructionDialog.Designer.cs  DeleteApplicationDialog.Designer.cs  EditVariablesDialog.Designer.cs  ErrorsDialog.Designer.cs  HintTextBox.cs  InstallingApplicationsDialog.Designer.cs  InstallingApplicationsDialog.resx  InstructionBaseDialog.Designer.cs  LogDialog.Designer.cs  LogDialog.resx  MultilineEditorDialog.Designer.cs  NewSnippetDialog.Designer.cs  NewVariableDialog.Designer.cs  PaintableTextBoxBase.cs  RenameFileDialog.Designer.cs  SelectApplicationDialog.Designer.cs  SetPlaceholderDialog.Designer.cs  SettingsDialog.Designer.cs  SetupInstructionListBoxPanel.cs  StartProcessInstructionDialog.Designer.cs  StartProcessInstructionDialog.resx  TextBox.cs  VariableTextBox.cs
Properties/: Resources.Designer.cs  Settings.Designer.cs
dependencies/ScintillaNET/: .gitignore
dependencies/ScintillaNET/src/: ScintillaNET.sln
dependencies/SharpSSH/: .gitignore  SharpSSH.sln
dependencies/SharpSSH/Examples/: Examples.csproj
dependencies/SharpSSH/SharpSSH/: Main.cs  SharpSSH.csproj
dependencies/System.Data.SQLite/: SQLite.NET.2005.MSBuild.sln  SQLite.NET.2005.sln  SQLite.NET.2008.MSBuild.sln  SQLite.NET.2008.sln  SQLite.NET.2010.MSBuild.sln  SQLite.NET.2010.sln  SQLite.NET.2012.MSBuild.sln  SQLite.NET.2012.sln  SQLite.NET.2013.MSBuild.sln  SQLite.NET.2013.sln  SQLite.NET.2015.MSBuild.sln  SQLite.NET.2015.sln  SQLite.NET.2017.MSBuild.sln  SQLite.NET.2017.sln  SQLite.NET.2026.sln  SQLite.NET.NetStandard20.MSBuild.sln  SQLite.NET.NetStandard20.sln  SQLite.NET.NetStandard21.MSBuild.sln  SQLite.NET.NetStandard21.sln  readme.htm
dependencies/System.Data.SQLite/Doc/: SQLite.NET.chm  SQLite.NET.hhc  SQLite.NET.hhp  buildChm.tcl  sync.eagle  vtab.tcl
dependencies/System.Data.SQLite/NuGet/: SQLite.Beta.nuspec  SQLite.Core.Beta.nuspec  SQLite.Core.MSIL.Beta.nuspec  SQLite.Core.MSIL.Test.nuspec  SQLite.Core.MSIL.nuspec  SQLite.Core.NetFramework.nuspec  SQLite.Core.NetStandard.nuspec  SQLite.Core.Test.nuspec  SQLite.Core.nuspec  SQLite.EF6.Beta.nuspec  SQLite.EF6.Test.nuspec  SQLite.EF6.nuspec  SQLite.Linq.Beta.nuspec  SQLite.Linq.Test.nuspec  SQLite.Linq.nuspec  SQLite.MSIL.Beta.nuspec  SQLite.MSIL.Test.nuspec  SQLite.MSIL.nuspec  SQLite.Test.nuspec  SQLite.nuspec  SQLite.x64.nuspec  SQLite.x86.nuspec
dependencies/System.Data.SQLite/SQLite.Designer/: AssemblyInfo.cs  SQLiteOptions.cs  source.extension.vsixmanifest
dependencies/System.Data.SQLite/Setup/: archive.bat  bake.bat  (+49 more)
dependencies/diffiehellman/: DiffieHellman.csproj  DiffieHellman.make  DiffieHellman.sln  Makefile  Makefile.am  Makefile.in  README  aclocal.m4  autogen.sh  config.status  configure  configure.ac  diffiehellman.pc  diffiehellman.pc.in  diffiehellman.snk  diffiehellman.spec  diffiehellman.spec.in
dependencies/diffiehellman/Properties/: AssemblyInfo.cs
dependencies/diffiehellman/src/: AssemblyInfo.cs  AssemblyInfo.cs.in
dependencies/scintilla/: .gitignore
dependencies/seclib/: Org.Mentalis.Security.xml  Security Library.sln
(+262 files in other folders)
